--- a/nginx.conf.template
+++ b/nginx.conf.template
@@ -27,6 +27,8 @@ http {
 
             proxy_pass http://proxyapp:{{targetPort}};
             proxy_set_header  X-Real-IP  $remote_addr;
+            
+            client_max_body_size 500M;
         }
     }
 }
